--- a/src/app/pages/newintake/my-newintake/intake-evaluation-fields/intake-evaluation-fields.component.html
+++ b/src/app/pages/newintake/my-newintake/intake-evaluation-fields/intake-evaluation-fields.component.html
@@ -14,13 +14,13 @@
           </div>
           <div class="col-sm-4">
             <mat-form-field>
-              <input type="text"  formControlName="wvrnumber" matInput placeholder="WVR-sequence number" (focusout)="onChange($event)">
+              <input type="text" formControlName="wvrnumber" matInput placeholder="WVR-sequence number" (focusout)="onChange($event)">
             </mat-form-field>
           </div>
           <div class="col-sm-4">
-              <mat-form-field>
-                  <input type="text"  matInput formControlName="petitionid" placeholder="Petition ID" (focusout)="onChange($event)">
-                </mat-form-field>
+            <mat-form-field>
+              <input type="text" matInput formControlName="petitionid" placeholder="Petition ID" (focusout)="onChange($event)">
+            </mat-form-field>
           </div>
         </div>
       </div>
@@ -29,80 +29,80 @@
       <div class="col-sm-12">
         <div class="row">
           <div class="col-sm-4">
+            <mat-form-field>
+              <input type="text" matInput formControlName="offenselocation" placeholder="Location of Offense(s)" (focusout)="onChange($event)">
+            </mat-form-field>
+          </div>
+          <div class="col-sm-4">
+            <mat-form-field>
+              <input type="text" matInput formControlName="adultpetitionid" placeholder="Adult Petition ID" (focusout)="onChange($event)">
+            </mat-form-field>
+          </div>
+          <div class="col-sm-4">
+            <div class="no-pad clsIntake dpnew ">
               <mat-form-field>
-                  <input type="text"  matInput formControlName="offenselocation" placeholder="Location of Offense(s)" (focusout)="onChange($event)">
-                </mat-form-field>
-          </div>
-          <div class="col-sm-4">
-              <mat-form-field>
-                  <input type="text"  matInput formControlName="adultpetitionid" placeholder="Adult Petition ID" (focusout)="onChange($event)">
-                </mat-form-field>
-          </div>
-          <div class="col-sm-4">
-              <div class="no-pad clsIntake dpnew ">
-                  <mat-form-field>
-                      <input matInput formControlName="complaintrcddate" [matDatepicker]="complaintrcddatepicker" placeholder="Complaint Received Date - MM/DD/YYYY">
-                      <mat-datepicker-toggle matSuffix [for]="complaintrcddatepicker"></mat-datepicker-toggle>
-                      <mat-datepicker #complaintrcddatepicker></mat-datepicker>
-                  </mat-form-field>
-              </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="row">
-          <div class="col-sm-4">
-              <mat-form-field>
-                  <mat-select placeholder="County of Occurrence" formControlName="countyid">
-                      <mat-option *ngFor="let item of mdCountys$ | async" value="{{item.value}}">{{item.text}}</mat-option>
-                  </mat-select>
-              </mat-form-field> 
-          </div>
-          <div class="col-sm-4">
-              <div class="no-pad clsIntake dpnew ">
-                  <mat-form-field>
-                      <input matInput formControlName="arrestdate" [max]="maxDate" [matDatepicker]="picker" placeholder="Arrest Date - MM/DD/YYYY">
-                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                      <mat-datepicker #picker></mat-datepicker>
-                  </mat-form-field>
-              </div>    
-          </div>
-          <div class="col-sm-4">
-              <mat-form-field>
-                  <input type="text"  matInput formControlName="sourceagency" placeholder="Source Agency" (focusout)="onChange($event)">
-                      </mat-form-field>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="row">
-          <div class="col-sm-4">
-              <mat-form-field>
-                  <input type="text"  matInput formControlName="zipcode" placeholder="Zip Code" (focusout)="onChange($event)">
-                  </mat-form-field>
-            
-          </div>
-          <div class="col-sm-4">
-              <mat-form-field>
-                  <input type="text"  matInput formControlName="complaintid" placeholder="Complaint ID" (focusout)="onChange($event)">
-                  </mat-form-field>
-          </div>
-          <div class="col-sm-4">
-              <mat-form-field>
-                  <mat-select placeholder="Alleged Offense" formControlName="allegedoffense">
-                      <mat-option *ngFor="let item of offenceCategories$ | async" value="{{item.value}}">{{item.text}}</mat-option>
-                  </mat-select>
-              </mat-form-field>    
+                <input matInput formControlName="complaintrcddate" [max]="maxDate" [matDatepicker]="complaintrcddatepicker" placeholder="Complaint Received Date - MM/DD/YYYY">
+                <mat-datepicker-toggle matSuffix [for]="complaintrcddatepicker"></mat-datepicker-toggle>
+                <mat-datepicker #complaintrcddatepicker></mat-datepicker>
+              </mat-form-field>
             </div>
+          </div>
         </div>
       </div>
     </div>
-   
-    
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="row">
+          <div class="col-sm-4">
+            <mat-form-field>
+              <mat-select placeholder="County of Occurrence" formControlName="countyid">
+                <mat-option *ngFor="let item of mdCountys$ | async" value="{{item.value}}">{{item.text}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col-sm-4">
+            <div class="no-pad clsIntake dpnew ">
+              <mat-form-field>
+                <input matInput formControlName="arrestdate" [max]="maxDate" [matDatepicker]="picker" placeholder="Arrest Date - MM/DD/YYYY">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <mat-form-field>
+              <input type="text" matInput formControlName="sourceagency" placeholder="Source Agency" (focusout)="onChange($event)">
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="row">
+          <div class="col-sm-4">
+            <mat-form-field>
+              <input type="text" matInput formControlName="zipcode" placeholder="Zip Code" (focusout)="onChange($event)">
+            </mat-form-field>
+
+          </div>
+          <div class="col-sm-4">
+            <mat-form-field>
+              <input type="text" matInput formControlName="complaintid" placeholder="Complaint ID" (focusout)="onChange($event)">
+            </mat-form-field>
+          </div>
+          <div class="col-sm-4">
+            <mat-form-field>
+              <mat-select placeholder="Alleged Offense" formControlName="allegedoffense">
+                <mat-option *ngFor="let item of offenceCategories$ | async" value="{{item.value}}">{{item.text}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <div class="row">
       <div class="col-sm-8">
         <div class="row" style="margin-top: 20px; margin-bottom: 20px">
@@ -125,22 +125,22 @@
         <div class="row">
           <div class="col-sm-6">
             <mat-form-field *ngIf="incidentDateOption==0">
-                <input matInput formControlName="allegedoffensedate" [max]="maxDate" [matDatepicker]="picker" placeholder="Alleged Offence Date - MM/DD/YYYY">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+              <input matInput formControlName="allegedoffensedate" [max]="maxDate" [matDatepicker]="picker" placeholder="Alleged Offence Date - MM/DD/YYYY">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
-            
+
             <mat-form-field *ngIf="incidentDateOption==2">
-                <input matInput formControlName="allegedoffensedate" [max]="maxDate" [matDatepicker]="picker" placeholder="Begin Date - MM/DD/YYYY">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+              <input matInput formControlName="allegedoffensedate" [max]="maxDate" [matDatepicker]="picker" placeholder="Begin Date - MM/DD/YYYY">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
           </div>
           <div class="col-sm-6">
             <mat-form-field *ngIf="incidentDateOption==2">
-                <input matInput formControlName="allegedoffensetodate" [max]="maxDate" [matDatepicker]="picker" placeholder="End Date - MM/DD/YYYY">
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+              <input matInput formControlName="allegedoffensetodate" [max]="maxDate" [matDatepicker]="picker" placeholder="End Date - MM/DD/YYYY">
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
           </div>
         </div>
