--- a/src/app/pages/newintake/my-newintake/intake-complaint-type/intake-complaint-type.component.html
+++ b/src/app/pages/newintake/my-newintake/intake-complaint-type/intake-complaint-type.component.html
@@ -1,4 +1,5 @@
 <div class="cnt-min-height">
+ 
   <form [formGroup]="caseCreationFormGroup">
     <div class="row">
       <div class="col-sm-8">
@@ -55,12 +56,17 @@
               </li>
             </ul>
             <div class="actionicons">
+                <span data-target="#intake-complaint-pdf" (click)="deleteCase(case)" data-toggle="modal">
+                    <i class="fa fa-download text-22"></i>
+                  </span>
               <span (click)="onEditCase(case)"  data-target="#intake-edittypemodal" data-toggle="modal">
                 <i class="fa fa-pencil text-22 "></i>
               </span>
               <span data-target="#delete-case-popup" (click)="deleteCase(case)" data-toggle="modal">
                 <i class="fa fa-trash text-22"></i>
               </span>
+             
+              
             </div>
           </div>
           <div class="cases_alegation">
@@ -248,3 +254,26 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="intake-complaint-pdf" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog modal-lg custom-wid" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" id="pdf-header-id" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">X</span>
+          </button>
+          <h4 class="modal-title">PDF preview</h4>
+        </div>
+        <div class="modal-body">  
+            <div class="page sizeA4" id="cjams-pdf">        
+            <pdf-header></pdf-header>
+        
+         </div>
+         <div class="text-right big-bot-space right-mspace-15">
+            <button type="button" class="btn-pri" (click)="downloadCasePdf()" data-dismiss="modal"> Download </button>
+            
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
