--- a/src/app/pages/newintake/my-newintake/intake-complaint-type/intake-complaint-type.component.scss
+++ b/src/app/pages/newintake/my-newintake/intake-complaint-type/intake-complaint-type.component.scss
@@ -33,3 +33,15 @@
     font-size: 22px;}
     
     .bold{font-weight: 600;}
+
+    .page {
+        background: white;
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 0.5cm;
+        box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
+      }
+      .sizeA4 {  
+        width: 21cm;
+        height: 29.7cm; 
+      }
