--- a/src/app/shared/pages/cjams-pdf/cjams-pdf.component.html
+++ b/src/app/shared/pages/cjams-pdf/cjams-pdf.component.html
@@ -554,52 +554,107 @@
     <br>
     <br>
     <br>
-    <footer>
-      <div class="row footer ">
-        <div class="col-sm-12 align-center">
-          <p>410-230-3333 / Toll Free: 1-888-639-7499 / TDD: 1-800-735-2258</p>
-          <p> Treating Children &nbsp;
-            <span class="red-bullet"></span> &nbsp; Supporting Families &nbsp;
-            <span class="red-bullet"></span> &nbsp; Protecting Communities</p>
-        </div>
-      </div>
+      <footer>
+          <div class="row footer ">
+              <div class="col-sm-12">
+                  <div class="col-sm-2 " style="text-align: right">
+                      <p>   <b><i class="fa fa-wheelchair footer-icon"></i></b> </p>
+                  </div>
+                  <div class="col-sm-10 align-center">
+                      <p>410-230-3333   /   Toll Free: 1-888-639-7499   /   TDD: 1-800-735-2258</p>
+                      <p> Treating Children    &nbsp;<span class="red-bullet"></span> &nbsp;    Supporting Families       &nbsp;  <span class="red-bullet"></span>   &nbsp;       Protecting Communities</p>
+                  </div>
+              </div>
+          </div>
 
-    </footer>
+      </footer>
 
   </div>
-  <div class="pdf-page sizeA4">
-    <header class="header">
-      <div class="pull-left">
-        <img src="assets/images/pdf/header.png" class="header-img">
-      </div>
-      <div class="pull-right">
-        <div class="header-address">
-          Headquarters
-          <br> 120 West Fayetee Street
-          <br> Baltimore, Maryland 21201
-        </div>
-      </div>
-      <div class="hr-border"></div>
-      <div class="row signature">
-        <div class="col-sm-4 align-center">
-          Boyd K. Rutherford
-          <br> Lt. Governor
+    <div class="pdf-page sizeA4">
+        <div class="margin-wrapper">
+            <div class="row title ">
+                <div class="col-sm-12">
+                    <br> <br><br>
 
-        </div>
-        <div class="col-sm-4 align-center">
-          Larry Hogan
-          <br> Governor
+                    IF YOU DISAGREE WITH THE DECISION OF THE INTAKE OFFICER, COMPLETE THE FORM BELOW AND SEND IT SO THAT IT IS RECEIVED BY (DATE):
+                    <br> <br><br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    Regional Director Name
+                </div>
+                <br>
+                <div class="col-sm-12">
+                    Regional Address
+                </div>
+                <br><br><br>
+                <div class="col-sm-12">
+                    Re: Youth Name:
+                    <br>
+                    &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; Youth ID#:
+                    <br>
+                    &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Request for Peace Order Complaint Appeal
+                </div>
 
-        </div>
-        <div class="col-sm-4 align-center">
-          Sam Abed
-          <br> Secretary
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <br>
+                    <br>
+                    <p>
+                        I have been informed of the Intake Officer’s decision not to forward the Peace Order Complaint to the juvenile court for further proceedings.
+                    </p>
+                    <p>
+                        I disagree with this decision, request that the Department of Juvenile Services’ Regional Director review the decision, and authorize the filing of the Peace Order Complaint with the Juvenile Court.
 
-        </div>
-      </div>
 
-    </header>
-  </div>
+                    </p>
+                    <br><br>
+
+                </div>
+            </div>
+
+            <br><br><br>
+            <div class="row">
+                <div class="col-sm-4">
+                    Signature:
+                </div>
+                <div class="col-sm-6 signature-border">
+                    kathir
+                </div>
+            </div>
+            <div class="row">
+                <br>
+                <div class="col-sm-4">
+                    Printed Name:
+                </div>
+
+                <div class="col-sm-6 signature-border">
+                    kathir
+                </div>
+
+            </div>
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+            <br><br><br><br><br><br>
+            <br><br><br><br>
+            <footer>
+                <div class="row footer ">
+                    <div class="col-sm-12">
+                        <div class="col-sm-2 " style="text-align: right">
+                            <p>   <b><i class="fa fa-wheelchair footer-icon"></i></b> </p>
+                        </div>
+                        <div class="col-sm-10 align-center">
+                            <p>410-230-3333   &nbsp;/  &nbsp;  Toll Free: 1-888-639-7499   &nbsp; /  &nbsp;   TDD: 1-800-735-2258</p>
+                            <p> Treating Children    &nbsp;<span class="red-bullet"></span> &nbsp;    Supporting Families       &nbsp;  <span class="red-bullet"></span>   &nbsp;       Protecting Communities</p>
+                        </div>
+                    </div>
+                </div>
+
+            </footer>
+        </div>
+    </div>
 </div>
 
 
