--- a/src/app/shared/pages/cjams-pdf/cjams-pdf.component.scss
+++ b/src/app/shared/pages/cjams-pdf/cjams-pdf.component.scss
@@ -62,3 +62,16 @@ margin-right: 0px;
     display: inline-block;
     box-shadow: 2px 2px 2px 2px grey
  }
+
+ .page-top-margin {
+     margin-top:60px;
+ }
+
+ .signature-border {
+     border-bottom: 1px solid black;
+ }
+
+ .footer-icon {
+     font-size: 35px;
+     font-weight: bold;
+ }
