--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -11,6 +11,7 @@
 
 @import url("../assets/css/toastr.css");
 @import url("../assets/css/style.css");
+@import url("../assets/css/pdf-style.css");
 @import url("../assets/css/bootstrap-datetimepicker.min.css");
 @import url("../assets/css/wizard.css");
 @import url("../assets/css/jquery.scrolling-tabs.css");
