--- a/src/app/pages/newintake/my-newintake/intake-complaint-type/intake-complaint-type.component.html
+++ b/src/app/pages/newintake/my-newintake/intake-complaint-type/intake-complaint-type.component.html
@@ -1,5 +1,5 @@
 <div class="cnt-min-height">
- 
+
   <form [formGroup]="caseCreationFormGroup">
     <div class="row">
       <div class="col-sm-8">
@@ -9,20 +9,20 @@
     </div>
     <div class="row">
       <div class="col-sm-3">
-          <mat-form-field>
-              <mat-select placeholder="Complaint Type" formControlName="serviceType" (change)="loadSubServiceTypes($event)">
-                  <mat-option *ngFor="let item of serviceTypes$ | async" value="{{item.value}}" >{{item.text}}</mat-option>
-              </mat-select>
-          </mat-form-field> 
-       
+        <mat-form-field>
+          <mat-select placeholder="Complaint Type" formControlName="serviceType" (change)="loadSubServiceTypes($event)">
+            <mat-option *ngFor="let item of serviceTypes$ | async" value="{{item.value}}">{{item.text}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+
       </div>
       <div class="col-sm-3">
-          <mat-form-field>
-              <mat-select placeholder="Sub Type " formControlName="subServiceType" >
-                  <mat-option *ngFor="let item of subServiceTypes$ | async" value="{{item.value}}" >{{item.text}}</mat-option>
-              </mat-select>
-          </mat-form-field>
-        
+        <mat-form-field>
+          <mat-select placeholder="Sub Type " formControlName="subServiceType">
+            <mat-option *ngFor="let item of subServiceTypes$ | async" value="{{item.value}}">{{item.text}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+
       </div>
       <div class="col-sm-3">
         <button class="btn-pri m-t-10 " (click)="addCase()" type="submit">Add</button>
@@ -44,29 +44,31 @@
         <section class="created-cases mrg-top25" *ngFor="let case of createdCases">
           <div class="casestop-sec">
             <ul class="list-unstyled list-inline">
-              <li> <b>CASE NUMBER
-                <br/> {{case.caseID}} </b></li>
+              <li>
+                <b>CASE NUMBER
+                  <br/> {{case.caseID}} </b>
+              </li>
               <li> COMPLAINT TYPE
                 <br/>{{case.serviceTypeValue}} </li>
               <li> SUB TYPES
                 <br/>{{case.subSeriviceTypeValue}}</li>
-              <li> STATUS & DISPOSITION
+              <!--<li> STATUS & DISPOSITION
                 <br/>
-                <a href > ADD STATUS & DISPOSITION</a>
-              </li>
+                <a href> ADD STATUS & DISPOSITION</a>
+              </li>-->
             </ul>
             <div class="actionicons">
-                <span data-target="#intake-complaint-pdf" (click)="deleteCase(case)" data-toggle="modal">
-                    <i class="fa fa-download text-22"></i>
-                  </span>
-              <span (click)="onEditCase(case)"  data-target="#intake-edittypemodal" data-toggle="modal">
+              <span data-target="#intake-complaint-pdf1" *ngIf="isPeaceOrder(case)" data-toggle="modal">
+                <i class="fa fa-download text-22"></i>
+              </span>
+              <span (click)="onEditCase(case)" data-target="#intake-edittypemodal" data-toggle="modal">
                 <i class="fa fa-pencil text-22 "></i>
               </span>
               <span data-target="#delete-case-popup" (click)="deleteCase(case)" data-toggle="modal">
                 <i class="fa fa-trash text-22"></i>
               </span>
-             
-              
+
+
             </div>
           </div>
           <div class="cases_alegation">
@@ -110,28 +112,28 @@
         <h4 class="modal-title">Edit Complaint/Sub Type</h4>
       </div>
       <div class="modal-body">
-        
+
         <div class="row mrg-top25">
           <form [formGroup]="caseEditFormGroup">
-              <div class="col-sm-6">
-                  <mat-form-field>
-                      <mat-select placeholder="Complaint Type" formControlName="serviceType" (change)="loadSubServiceTypes($event)">
-                          <mat-option *ngFor="let item of serviceTypes$ | async" value="{{item.value}}" >{{item.text}}</mat-option>
-                      </mat-select>
-                  </mat-form-field> 
-                </div>
             <div class="col-sm-6">
-                <mat-form-field>
-                    <mat-select placeholder="Sub Type " formControlName="subServiceType" >
-                        <mat-option *ngFor="let item of subServiceTypes$ | async" value="{{item.value}}" >{{item.text}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-              
+              <mat-form-field>
+                <mat-select placeholder="Complaint Type" formControlName="serviceType" (change)="loadSubServiceTypes($event)">
+                  <mat-option *ngFor="let item of serviceTypes$ | async" value="{{item.value}}">{{item.text}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div class="col-sm-6">
+              <mat-form-field>
+                <mat-select placeholder="Sub Type " formControlName="subServiceType">
+                  <mat-option *ngFor="let item of subServiceTypes$ | async" value="{{item.value}}">{{item.text}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+
             </div>
             <div class="row">
-                <div class="col-sm-3 pull-right">
-                    <button class="btn-pri m-t-10 " (click)="updateSubTypes()" [disabled]="isUpdateDisabled()" type="submit">Update</button>
-                  </div>
+              <div class="col-sm-3 pull-right">
+                <button class="btn-pri m-t-10 " (click)="updateSubTypes()" [disabled]="isUpdateDisabled()" type="submit">Update</button>
+              </div>
             </div>
           </form>
         </div>
@@ -238,42 +240,21 @@
 </div>
 
 <div class="modal fade " id="delete-case-popup" role="dialog">
-    <div class="modal-dialog modal-md custom-wid">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">×</button>
-                <h4 class="modal-title"> Confirm Delete </h4>
-            </div>
-            <div class="modal-body">
-                <p> Are you sure you want to delete this case? </p>
-                <div class="text-right big-bot-space right-mspace-15">
-                    <button type="button" value="No" class="btn-pri" name="" data-dismiss="modal"> No </button>
-                    <button type="button" value="Yes" class="btn-pri" name=""  (click)="deleteCaseConfirm()"> Yes </button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="intake-complaint-pdf" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog modal-lg custom-wid" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" id="pdf-header-id" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">X</span>
-          </button>
-          <h4 class="modal-title">PDF preview</h4>
-        </div>
-        <div class="modal-body">  
-            <div class="page sizeA4" id="cjams-pdf">        
-            <pdf-header></pdf-header>
-        
-         </div>
-         <div class="text-right big-bot-space right-mspace-15">
-            <button type="button" class="btn-pri" (click)="downloadCasePdf()" data-dismiss="modal"> Download </button>
-            
-        </div>
+  <div class="modal-dialog modal-md custom-wid">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">×</button>
+        <h4 class="modal-title"> Confirm Delete </h4>
+      </div>
+      <div class="modal-body">
+        <p> Are you sure you want to delete this case? </p>
+        <div class="text-right big-bot-space right-mspace-15">
+          <button type="button" value="No" class="btn-pri" name="" data-dismiss="modal"> No </button>
+          <button type="button" value="Yes" class="btn-pri" name="" (click)="deleteCaseConfirm()"> Yes </button>
         </div>
       </div>
     </div>
   </div>
+</div>
+
+
