--- a/src/app/pages/newintake/my-newintake/intake-evaluation-fields/intake-evaluation-fields.component.html
+++ b/src/app/pages/newintake/my-newintake/intake-evaluation-fields/intake-evaluation-fields.component.html
@@ -32,7 +32,7 @@
           <div class="col-sm-4">
 
             <mat-form-field>
-              <mat-select placeholder="County of Occurrence" formControlName="countyid">
+              <mat-select placeholder="County of Residence" formControlName="countyid">
                 <mat-option *ngFor="let item of mdCountys$ | async" value="{{item.value}}">{{item.text}}</mat-option>
               </mat-select>
 
