--- a/src/app/pages/newintake/my-newintake/my-newintake.component.html
+++ b/src/app/pages/newintake/my-newintake/my-newintake.component.html
@@ -123,7 +123,7 @@
             <a data-toggle="tab" data-target="#Evaluation-Fields">EVALUATION FIELDS</a>
           </li>
           <li>
-            <a data-toggle="tab">Entities</a>
+            <a data-toggle="tab" >Entities</a>
           </li>
           <li *ngIf='!djsSelected'>
             <a data-toggle="tab">Service/Sub-type</a>
@@ -213,7 +213,7 @@
             </div>
           </div>
           <div class="tab-pane" id="intake-disposition">
-            <intake-disposition [timeReceived$]="timeReceived$" [dispositionInput$]="dispositionInput$" [dispositionOutPut$]="dispositionOutPut$" [dispositionRetrive$]="dispositionRetrive$"></intake-disposition>
+            <!-- <intake-disposition [timeReceived$]="timeReceived$" [dispositionInput$]="dispositionInput$" [dispositionOutPut$]="dispositionOutPut$" [dispositionRetrive$]="dispositionRetrive$"></intake-disposition> -->
           </div>
           <div class="tab-pane" id="Service">
             <div class="cnt-min-height">
@@ -230,3 +230,24 @@
 
   </form>
 </div>
+<div class="modal fade" id="intake-complaint-pdf1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog modal-lg custom-wid" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" id="pdf-header-id" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">X</span>
+          </button>
+          <h4 class="modal-title">PDF preview</h4>
+        </div>
+        <div class="modal-body">
+          <pdf-peace-order-appeal-letter [persons]="addedPersons" [general]="general" [evalFields]="evalFields" ></pdf-peace-order-appeal-letter>
+         
+
+          <div class="text-right big-bot-space right-mspace-15">
+            <button type="button" class="btn-pri" (click)="downloadCasePdf()"> Download </button>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
